Update Oct 25 2025
HUD and threading update